<resources>
    <string name="app_name">QuietTicketScanner</string>

    <string name="title_activity_loading_controller">Loading</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="verifying_connection">Verifying connection</string>
    <string name="close">Close</string>
    <string name="network">Network</string>
    <string name="cannotConnectToServer">Cannot connect to the server.</string>
    <string name="token">Access Token</string>
    <string name="scan">Scan</string>
    <string name="camera">Camera</string>
    <string name="insufficientPermissions">Insufficient Permissions</string>
    <string name="insufficientCameraPermissions">The app has no permission to access the camera. Please choose allow in the following permission dialog.</string>
    <string name="useFlashLight">Use Flashlight</string>
    <string name="useFrontCamera">Use Front Camera</string>
    <string name="continue_scanning">Continue Scanning</string>
    <string name="status_image">Status</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="license">License</string>
    <string name="qr_reader_license">QR-reader license</string>
    <string name="general_license">General License</string>
    <string name="general_license_content" translatable="false">
Copyright (c) 2016 Setarit\n\n
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\n
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>
    <string name="about_content">This app needs to be used in conjunction with https://quietticket.com. Please note that QuietTicket is a product and trademark of Setarit.\n\nThe source code of this app is freely available at https://github.com/Setarit/QuietTicketScanner\n\nMore products and info can be found at http://setarit.com</string>
    <string name="openJsonFile">Open</string>
    <string name="saveJsonFile">Save</string>
    <string name="findJsonFile">Find a scan file</string>
    <string name="loading">Loading</string>
    <string name="loadingFailed">Loading failed</string>
    <string name="insufficientStorageReadPermissions">The app has no permission to read from the storage. Please restart the app and allow storage access.</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="ticketAlreadyScanned">The ticket has already been scanned</string>
    <string name="ticketInvalid">Ticket unknown</string>
    <string name="ticketValid">Valid</string>
    <string name="code" translatable="false">Code</string>
    <string name="no">No</string>
    <string name="yes_override_previous_scans">Yes, open a new file</string>
    <string name="warning_overriding_previous_scans">Warning, you are about to open a new scan file without saving the previous one. The scanned tickets will be reset.\\nDo you want to continue?</string>
    <string name="saving">Saving</string>
    <string name="saving_failed">Saving failed</string>
</resources>
