<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.setarit.quietticketscanner.InfoController">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        <TextView
            android:layout_width="match_parent"
            android:autoLink="web"
            android:layout_height="wrap_content"
            android:text="@string/about_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_license"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_license_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr_reader_license"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcode_license"/>
    </LinearLayout>

</ScrollView>
